--- a/index.html
+++ b/index.html
@@ -26,19 +26,20 @@
     <script async defer crossorigin="anonymous"
         src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v8.0&appId=362221338350681&autoLogAppEvents=1"
         nonce="cgLbbhKn"></script>
-    <!-- navbar -->
+    
+        <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-primary">
         <a class="navbar-brand text-gray text-bold ml-5" href="#">祐祐的謝卡</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse links ml-5 mr-5" id="navbarNav">
-            <ul class="navbar-nav">
+        <div class="collapse navbar-collapse links ml-5 mr-5 " id="navbarNav">
+            <ul class="navbar-nav justify-content-between">
                 <li class="nav-item active">
                     <a class="nav-link hvr-underline-from-center" href="#">TOP<span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item hvr-underline-from-center mx-3">
+                <li class="nav-item hvr-underline-from-center">
                     <a class="nav-link" href="#">關於祐祐</a>
                 </li>
                 <li class="nav-item hvr-underline-from-center">
@@ -59,8 +60,7 @@
         </div>
     </section>
     <section class="guestbook">
-        <div class="fb-comments" data-href="https://yoyo1002.github.io/" data-numposts="5" data-width=""
-            data-order-by="reverse_time"></div>
+        <div class="fb-comments" data-href="https://yoyo1002.github.io/" data-numposts="5" data-width="700" data-order-by="reverse_time"></div>
     </section>
     <footer></footer>
 
