--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <!-- Hover.css v2.1.1 -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" rel="stylesheet" />
+        <!-- cssReset -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="css/all.css">
 </head>
 
@@ -27,9 +29,9 @@
         src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v8.0&appId=362221338350681&autoLogAppEvents=1"
         nonce="cgLbbhKn"></script>
     
-        <!-- navbar -->
+    <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-        <a class="navbar-brand text-gray text-bold ml-5" href="#">祐祐的謝卡</a>
+        <h1><a class="navbar-brand text-gray text-bold ml-5" href="#">祐祐的謝卡</a></h1>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -48,8 +50,25 @@
             </ul>
         </div>
     </nav>
-    <section class="parallax">
+    <!-- banner -->
+    <section class="banner mb-3">
+        <div class="banner_text banner-inside d-none d-lg-block">
+            <h2 class="banner_text_title">親愛的叔叔 阿姨 各位長輩們 大家好</h2>
+            <p class="banner_text_content">我是<span>紹宇</span>，是出生在愛你愛你年的天秤座小老鼠，<br>
+                看我一臉微笑就知道，<br>
+                我每天在充滿愛的環境下漸漸長大，<br>
+                感謝您們給我的關愛與祝福，<br>
+                也祝您平安順遂，健康喜樂喔！</p>
+        </div>
     </section>
+    <div class="banner_text d-block d-lg-none text-center w-75 m-auto">
+        <h2 class="banner_text_title">親愛的叔叔 阿姨 各位長輩們 大家好</h2>
+        <p class="banner_text_content">我是<span>紹宇</span>，是出生在愛你愛你年的天秤座小老鼠，<br>
+            看我一臉微笑就知道，<br>
+            我每天在充滿愛的環境下漸漸長大，<br>
+            感謝您們給我的關愛與祝福，<br>
+            也祝您平安順遂，健康喜樂喔！</p>
+    </div>
     <section class="content container">
         <div class="row">
             <div class="col text"></div>
