--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 也祝您平安順遂，健康喜樂喔！</p>
         </div>
     </section>
-    <div class="banner_text d-block d-lg-none text-center w-75 m-auto">
+    <div class="banner_text d-block d-lg-none text-center w-md-75 w-95 m-auto">
         <h2 class="banner_text_title">親愛的叔叔 阿姨 各位長輩們 大家好</h2>
         <p class="banner_text_content">我是<span>紹宇</span>，是出生在愛你愛你年的天秤座小老鼠，<br>
             看我一臉微笑就知道，<br>
