--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <!-- Hover.css v2.1.1 -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" rel="stylesheet" />
-        <!-- cssReset -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <!-- lightbox -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.css">
+    <!-- cssReset -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="css/all.css">
 </head>
 
@@ -28,11 +30,30 @@
     <script async defer crossorigin="anonymous"
         src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v8.0&appId=362221338350681&autoLogAppEvents=1"
         nonce="cgLbbhKn"></script>
-    
+
+    <script>
+        window.fbAsyncInit = function () {
+            FB.init({
+                appId: '362221338350681',
+                xfbml: true,
+                version: 'v8.0'
+            });
+            FB.AppEvents.logPageView();
+        };
+
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) { return; }
+            js = d.createElement(s); js.id = id;
+            js.src = "https://connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
+
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-primary">
         <h1><a class="navbar-brand text-gray text-bold ml-5" href="#">祐祐的謝卡</a></h1>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        <button class="navbar-toggler mr-5" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -49,6 +70,8 @@
                 </li>
             </ul>
         </div>
+        <div class="fb-like d-none d-lg-block" data-share="true" data-width="450" data-show-faces="true">
+        </div>
     </nav>
     <!-- banner -->
     <section class="banner mb-3">
@@ -63,35 +86,83 @@
     </section>
     <div class="banner_text d-block d-lg-none text-center w-md-75 w-95 m-auto">
         <h2 class="banner_text_title">親愛的叔叔 阿姨 各位長輩們 大家好</h2>
-        <p class="banner_text_content">我是<span>紹宇</span>，是出生在愛你愛你年的天秤座小老鼠，<br>
+        <p class="banner_text_content">我是<span>紹宇</span>，<br>
+            是出生在愛你愛你年的天秤座小老鼠，<br>
             看我一臉微笑就知道，<br>
             我每天在充滿愛的環境下漸漸長大，<br>
             感謝您們給我的關愛與祝福，<br>
             也祝您平安順遂，健康喜樂喔！</p>
     </div>
-    <section class="content container">
-        <div class="row">
-            <div class="col text"></div>
+    <!-- main -->
+    <section class="main container">
+        <div class="row text-gray-dark">
+            <div class="col-12 col-lg-6 info">
+                <div class="subtitle text-center mb-4">
+                    <div class="box mb-3"></div>
+                    <p>關於紹宇</p>
+                </div>
+                <ul class="info_content m-auto w-75">
+                    <li class="mb-3">性別：<i class="fas fa-mars"></i></li>
+                    <li class="mb-3">生日：2020/10/02</li>
+                    <li class="mb-3">星座：天秤座</li>
+                    <li class="mb-3">血型：AB</li>
+                    <li class="mb-3">興趣：睡覺、喝ㄋㄟㄋㄟ</li>
+                    <li class="mb-3">特色：燦爛的微笑</li>
+                </ul>
+            </div>
+            <div class="col-12 col-lg-6 photo">
+                <div class="subtitle text-center mb-4">
+                    <div class="box mb-3"></div>
+                    <p>紹宇日常</p>
+                </div>
+                <div class="d-flex flex-wrap justify-content-center">
+                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox01"></div></a>
+                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox02"></div></a>
+                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox03"></div></a>
+                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox04"></div></a>
+                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox05"></div></a>
+                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox06"></div></a>
+                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox07"></div></a>
+                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox08"></div></a>
+                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox09"></div></a>
+                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox10"></div></a>
+                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox11"></div></a>
+                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox12"></div></a>
+                </div>
+            </div>
         </div>
-        <div class="row">
-            <div class="col info"></div>
-            <div class="col pohoto"></div>
+        <div class="row text-gray-dark mt-5">
+            <div class="col">
+                <div class="subtitle text-center mb-4">
+                    <div class="box mb-3"></div>
+                    <p>紹宇日常</p>
+                </div>
+            </div>
         </div>
     </section>
-    <section class="guestbook">
-        <div class="fb-comments" data-href="https://yoyo1002.github.io/" data-numposts="5" data-width="700" data-order-by="reverse_time"></div>
+    <section class="guestbook container mt-5">
+        <div class="row">
+            <div class="col">
+                <div class="subtitle text-center mb-4">
+                    <div class="box mb-3"></div>
+                    <p>留下點祝福吧... <i class="fas fa-pen"></i></p>
+                </div>
+                <div class="fb-comments" data-href="https://yoyo1002.github.io/" data-numposts="5" data-width="700" data-order-by="reverse_time"></div>
+            </div>
+        </div>
+        
     </section>
-    <footer></footer>
+    <footer class="bg-primary text-center text-gray py-3">
+        <p>©2020 僅供親友情感交流，無商用，若侵權請來信 <a href="mailto:shoppingq@gmail.com">shoppingq@gmail.com</a></p>
+        <div class="m-auto"></div>
+        <div class="fb-like d-lg-none d-block mt-3" data-share="true" data-width="450" data-show-faces="true"
+            data-layout="button_count">
+        </div>
+    </footer>
 
-
-
-
-
+    <!-- js開始 -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
         crossorigin="anonymous"></script>
@@ -99,6 +170,7 @@
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
 </body>
 
 </html>
