--- a/index.html
+++ b/index.html
@@ -94,67 +94,70 @@
             也祝您平安順遂，健康喜樂喔！</p>
     </div>
     <!-- main -->
-    <section class="main container">
-        <div class="row text-gray-dark">
-            <div class="col-12 col-lg-6 info">
-                <div class="subtitle text-center mb-4">
-                    <div class="box mb-3"></div>
-                    <p>關於紹宇</p>
+    <section class="main">
+        <div class="container">
+            <div class="row text-gray-dark">
+                <div class="col-12 col-lg-6 info">
+                    <div class="subtitle text-center mb-4">
+                        <div class="box mb-3"></div>
+                        <p>關於紹宇</p>
+                    </div>
+                    <ul class="info_content m-auto w-75">
+                        <li class="mb-3">性別：<i class="fas fa-mars"></i></li>
+                        <li class="mb-3">生日：2020/10/02</li>
+                        <li class="mb-3">星座：天秤座</li>
+                        <li class="mb-3">血型：AB</li>
+                        <li class="mb-3">興趣：睡覺、喝ㄋㄟㄋㄟ</li>
+                        <li class="mb-3">特色：燦爛的微笑</li>
+                    </ul>
                 </div>
-                <ul class="info_content m-auto w-75">
-                    <li class="mb-3">性別：<i class="fas fa-mars"></i></li>
-                    <li class="mb-3">生日：2020/10/02</li>
-                    <li class="mb-3">星座：天秤座</li>
-                    <li class="mb-3">血型：AB</li>
-                    <li class="mb-3">興趣：睡覺、喝ㄋㄟㄋㄟ</li>
-                    <li class="mb-3">特色：燦爛的微笑</li>
-                </ul>
-            </div>
-            <div class="col-12 col-lg-6 photo">
-                <div class="subtitle text-center mb-4">
-                    <div class="box mb-3"></div>
-                    <p>紹宇日常</p>
-                </div>
-                <div class="d-flex flex-wrap justify-content-center">
-                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox01"></div></a>
-                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox02"></div></a>
-                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox03"></div></a>
-                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox04"></div></a>
-                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox05"></div></a>
-                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox06"></div></a>
-                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox07"></div></a>
-                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox08"></div></a>
-                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox09"></div></a>
-                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox10"></div></a>
-                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox11"></div></a>
-                    <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox12"></div></a>
+                <div class="col-12 col-lg-6 photo">
+                    <div class="subtitle text-center mb-4">
+                        <div class="box mb-3"></div>
+                        <p>紹宇日常</p>
+                    </div>
+                    <div class="d-flex flex-wrap justify-content-center">
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox01"></div></a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox02"></div></a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox03"></div></a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox04"></div></a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox05"></div></a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox06"></div></a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox07"></div></a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox08"></div></a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox09"></div></a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox10"></div></a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox11"></div></a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox12"></div></a>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="row text-gray-dark mt-5">
+        <div class="row text-gray-dark mt-5 bg-secondary">
             <div class="col">
                 <div class="subtitle text-center mb-4">
                     <div class="box mb-3"></div>
-                    <p>紹宇日常</p>
+                    <p>親友の關愛</p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="guestbook container mt-5">
+    <section class="guestbook container">
         <div class="row">
             <div class="col">
                 <div class="subtitle text-center mb-4">
                     <div class="box mb-3"></div>
                     <p>留下點祝福吧... <i class="fas fa-pen"></i></p>
                 </div>
-                <div class="fb-comments" data-href="https://yoyo1002.github.io/" data-numposts="5" data-width="700" data-order-by="reverse_time"></div>
+                <div class="plug-in">
+                    <div class="fb-comments" data-href="https://yoyo1002.github.io/" data-numposts="5" data-width="700" data-order-by="reverse_time"></div>
+                </div>
+                
             </div>
-        </div>
-        
+        </div>  
     </section>
     <footer class="bg-primary text-center text-gray py-3">
         <p>©2020 僅供親友情感交流，無商用，若侵權請來信 <a href="mailto:shoppingq@gmail.com">shoppingq@gmail.com</a></p>
-        <div class="m-auto"></div>
         <div class="fb-like d-lg-none d-block mt-3" data-share="true" data-width="450" data-show-faces="true"
             data-layout="button_count">
         </div>
