--- a/index.html
+++ b/index.html
@@ -150,9 +150,8 @@
                     <p>留下點祝福吧... <i class="fas fa-pen"></i></p>
                 </div>
                 <div class="d-flex justify-content-center">
-                    <div class="plug-in">
-                        <div class="fb-comments" data-href="https://yoyo1002.github.io/" data-numposts="5" data-width="700" data-order-by="reverse_time"></div>
-                    </div>
+                    <div class="fb-comments" data-href="https://yoyo1002.github.io/" data-numposts="5" data-width="700" data-order-by="reverse_time"></div>
+                    <!-- <div class="plug-in"></div> -->
                 </div>
             </div>
         </div>  
