--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <div class="d-lg-flex justify-content-center d-none">
                     <div class="fb-comments" data-href="https://yoyo1002.github.io/" data-numposts="5" data-width="700" data-order-by="reverse_time"></div>
                 </div>
-                <div class="fb-comments d-lg-none" data-href="https://yoyo1002.github.io/" data-numposts="5" data-width="700" data-order-by="reverse_time"></div>
+                <div class="fb-comments d-lg-none" data-href="https://yoyo1002.github.io/" data-numposts="5" data-width="" data-order-by="reverse_time"></div>
             </div>
         </div>  
     </section>
