--- a/index.html
+++ b/index.html
@@ -117,18 +117,42 @@
                         <p>紹宇日常</p>
                     </div>
                     <div class="d-flex flex-wrap justify-content-center">
-                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox01"></div></a>
-                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox02"></div></a>
-                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox03"></div></a>
-                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox04"></div></a>
-                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox05"></div></a>
-                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox06"></div></a>
-                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox07"></div></a>
-                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox08"></div></a>
-                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox09"></div></a>
-                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox10"></div></a>
-                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox11"></div></a>
-                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily"><div class="pixbox pixbox12"></div></a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily">
+                            <div class="pixbox pixbox01"></div>
+                        </a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily">
+                            <div class="pixbox pixbox02"></div>
+                        </a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily">
+                            <div class="pixbox pixbox03"></div>
+                        </a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily">
+                            <div class="pixbox pixbox04"></div>
+                        </a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily">
+                            <div class="pixbox pixbox05"></div>
+                        </a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily">
+                            <div class="pixbox pixbox06"></div>
+                        </a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily">
+                            <div class="pixbox pixbox07"></div>
+                        </a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily">
+                            <div class="pixbox pixbox08"></div>
+                        </a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily">
+                            <div class="pixbox pixbox09"></div>
+                        </a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily">
+                            <div class="pixbox pixbox10"></div>
+                        </a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily">
+                            <div class="pixbox pixbox11"></div>
+                        </a>
+                        <a href="img/daily/01.jpg" data-lightbox="image-1" data-title="yoyoDaily">
+                            <div class="pixbox pixbox12"></div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -138,6 +162,40 @@
                 <div class="subtitle text-center mb-4">
                     <div class="box mb-3"></div>
                     <p>親友の關愛</p>
+                </div>
+                <div class="carousel swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="https://placem.at/things" class="w-100" alt="" srcset="">
+                            <p class="swiper-text">SANDWISH</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="https://placem.at/things" class="w-100" alt="" srcset="">
+                            <p class="swiper-text">BAGEL</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="https://placem.at/things" class="w-100" alt="" srcset="">
+                            <p class="swiper-text">HAMBURGER</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="https://placem.at/things" class="w-100" alt="" srcset="">
+                            <p class="swiper-text">BURRITO</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="https://placem.at/things" class="w-100" alt="" srcset="">
+                            <p class="swiper-text">DRINK</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="https://placem.at/things" class="w-100" alt="" srcset="">
+                            <p class="swiper-text">SOY MILK</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="https://placem.at/things" class="w-100" alt="" srcset="">
+                            <p class="swiper-text">SALAD</p>
+                        </div>
+                    </div>
+                    <!-- Add Pagination -->
+                    <div class="swiper-pagination"></div>
                 </div>
             </div>
         </div>
@@ -150,11 +208,13 @@
                     <p>留下點祝福吧... <i class="fas fa-pen"></i></p>
                 </div>
                 <div class="d-lg-flex justify-content-center d-none">
-                    <div class="fb-comments" data-href="https://yoyo1002.github.io/" data-numposts="5" data-width="750" data-order-by="reverse_time"></div>
+                    <div class="fb-comments" data-href="https://yoyo1002.github.io/" data-numposts="5" data-width="750"
+                        data-order-by="reverse_time"></div>
                 </div>
-                <div class="fb-comments d-lg-none" data-href="https://yoyo1002.github.io/" data-numposts="5" data-width="100%" data-order-by="reverse_time"></div>
+                <div class="fb-comments d-lg-none" data-href="https://yoyo1002.github.io/" data-numposts="5"
+                    data-width="100%" data-order-by="reverse_time"></div>
             </div>
-        </div>  
+        </div>
     </section>
     <footer class="bg-primary text-center text-gray py-3">
         <p>©2020 僅供親友情感交流，無商用，若侵權請來信 <a href="mailto:shoppingq@gmail.com">shoppingq@gmail.com</a></p>
@@ -174,6 +234,45 @@
         crossorigin="anonymous"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+    <script>
+        // Initialize Swiper
+        var swiper = new Swiper('.swiper-container', {
+            slidesPerView: 2,
+            // spaceBetween: 8,
+            loop: true,
+            loopAdditionalSlides: 50,
+            centeredSlides: true,
+            slideToClickedSlide: true,
+            grabCursor: true,
+            effect: 'coverflow',
+            coverflowEffect: {
+                rotate: 1,  //摺疊角度
+                stretch: 1, //物件重疊的範圍
+                depth: 150, //物件突出
+                modifier: 1, //物件彎度
+                slideShadows: true,
+            },
+            autoplay: {
+                delay: 2800,
+            },
+            pagination: {
+                el: '.swiper-pagination',
+                clickable: true,
+            },
+            breakpoints: {
+                992: {
+                    slidesPerView: 3,
+                    // spaceBetween: 10,
+                },
+            }
+        });
+
+        //lightbox
+        lightbox.option({
+            'showImageNumberLabel': false,
+        })
+        
+    </script>
 </body>
 
 </html>
