--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                         data-order-by="reverse_time"></div>
                 </div>
                 <div class="fb-comments d-lg-none" data-href="https://yoyo1002.github.io/" data-numposts="5"
-                    data-width="100%" data-order-by="reverse_time"></div>
+                    data-width="" data-order-by="reverse_time"></div>
             </div>
         </div>
     </section>
