--- a/index.html
+++ b/index.html
@@ -198,31 +198,51 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <img src="img/family/01.jpg" class="w-100" alt="" srcset="">
-                            <p class="swiper-text">SANDWISH</p>
+                            <p class="swiper-text mt-3">姊姊們好期待我出生</p>
                         </div>
                         <div class="swiper-slide">
                             <img src="img/family/02.jpg" class="w-100" alt="" srcset="">
-                            <p class="swiper-text">BAGEL</p>
+                            <p class="swiper-text mt-3">我們一家的笑容好燦爛</p>
                         </div>
                         <div class="swiper-slide">
-                            <img src="https://placem.at/things" class="w-100" alt="" srcset="">
-                            <p class="swiper-text">HAMBURGER</p>
+                            <img src="img/family/03.jpg" class="w-100" alt="" srcset="">
+                            <p class="swiper-text mt-3">我和外公對望</p>
                         </div>
                         <div class="swiper-slide">
-                            <img src="https://placem.at/things" class="w-100" alt="" srcset="">
-                            <p class="swiper-text">BURRITO</p>
+                            <img src="img/family/04.jpg" class="w-100" alt="" srcset="">
+                            <p class="swiper-text mt-3">外婆抱抱</p>
                         </div>
                         <div class="swiper-slide">
-                            <img src="https://placem.at/things" class="w-100" alt="" srcset="">
-                            <p class="swiper-text">DRINK</p>
+                            <img src="img/family/05.jpg" class="w-100" alt="" srcset="">
+                            <p class="swiper-text mt-3">早晨和二姊姊深情對望</p>
                         </div>
                         <div class="swiper-slide">
-                            <img src="https://placem.at/things" class="w-100" alt="" srcset="">
-                            <p class="swiper-text">SOY MILK</p>
+                            <img src="img/family/06.jpg" class="w-100" alt="" srcset="">
+                            <p class="swiper-text mt-3">大姊姊幫我拍拍</p>
                         </div>
                         <div class="swiper-slide">
-                            <img src="https://placem.at/things" class="w-100" alt="" srcset="">
-                            <p class="swiper-text">SALAD</p>
+                            <img src="img/family/07.jpg" class="w-100" alt="" srcset="">
+                            <p class="swiper-text mt-3">小舅公一家來看我唷</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/family/08.jpg" class="w-100" alt="" srcset="">
+                            <p class="swiper-text mt-3">小姑婆全家出動</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/family/09.jpg" class="w-100" alt="" srcset="">
+                            <p class="swiper-text mt-3">大伯公來看我</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/family/10.jpg" class="w-100" alt="" srcset="">
+                            <p class="swiper-text mt-3">二姑婆也來看我喔</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/family/11.jpg" class="w-100" alt="" srcset="">
+                            <p class="swiper-text mt-3">爺爺來看我</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/family/12.jpg" class="w-100" alt="" srcset="">
+                            <p class="swiper-text mt-3">阿姨來看我</p>
                         </div>
                     </div>
                     <!-- Add Pagination -->
@@ -303,9 +323,9 @@
                 modifier: 1, //物件彎度
                 slideShadows: true,
             },
-            // autoplay: {
-            //     delay: 2800,
-            // },
+            autoplay: {
+                delay: 2800,
+            },
             pagination: {
                 el: '.swiper-pagination',
                 clickable: true,
